# cdevstudio

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cmake/: FindPlatform.cmake
cmake/modules/: FindC++Utils.cmake  FindQt5Utils.cmake
doc/: CMakeLists.txt  Documentation.tex  Doxygen
package/linux_archlinux_tarxz/: PKGBUILD  create_package.sh  instructions.txt
package/linux_debian_deb/: create_package.sh  instructions.txt
package/linux_debian_deb/debian/: cdevstudio.install  changelog  control  copyright  libcdevstudiobackend-dev.install  libcdevstudiobackend0.install  rules  (+11 more)
package/linux_fedora_rpm/: cdevstudio.spec  create_package.sh  instructions.txt
package/linux_make/: create_package.sh  instructions.txt
package/windows_exe/: cdevstudio.nsis  create_package_mingw.bat  create_package_msvc.bat  instructions.txt  package.nsis
src/: CMakeLists.txt
src/cdevstudio/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CDevStudio.cpp  CDevStudio.h  CDevStudio.ui  CMakeLists.txt  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogCreateProject.cpp  DialogCreateProject.h  DialogCreateProject.ui  DialogFindText.cpp  DialogFindText.h  DialogHelp.cpp  DialogHelp.h  DialogHelp.ui  DialogPlugins.cpp  DialogPlugins.h  DialogPlugins.ui  DialogProjectSettings.cpp  DialogProjectSettings.h  DialogReplaceText.cpp  DialogReplaceText.h  DialogSettings.cpp  DialogSettings.h  DialogSettings.ui  GeneralPage.cpp  GeneralPage.h  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  ObjectExplorerView.cpp  ObjectExplorerView.h  PluginDialog.cpp  PluginDialog.h  PluginDialog.ui  ProjectExplorerView.cpp  ProjectExplorerView.h  (+5 more)
src/cdevstudio/data/: CMakeLists.txt  about_license.html  cdevstudio.desktop  text_about.html  text_help.html  text_license.html  text_thanksto.html
src/cdevstudio/data/desktop/: cdevstudio.desktop
src/cdevstudio/data/text/: about_about.html  about_thanksto.html
src/cdevstudio/data/translation/: translation_de.ts  translation_en.ts
src/cdevstudio/ui/: DialogAbout.ui  DialogCreateProject.ui  DialogFindText.ui  DialogHelp.ui  DialogProjectSettings.ui  DialogReplaceText.ui  DialogSettings.ui
src/cdevstudiobackend/: CDevStudioBackend.cpp  CDevStudioBackend.h  CDevStudioBackendExport.h  CMakeLists.txt
src/cdevstudiocodeedit/: CDevStudioCodeEdit.cpp  CDevStudioCodeEdit.h  CDevStudioCodeEditExport.h  CMakeLists.txt
src/cdevstudioplatform/: Backend.cpp  Backend.h  CDevStudioAction.cpp  CDevStudioAction.h  CDevStudioBackend.cpp  CDevStudioBackend.h  CDevStudioData.cpp  CDevStudioData.h  CDevStudioMenu.cpp  CDevStudioMenu.h  CDevStudioMenuBar.cpp  CDevStudioMenuBar.h  CDevStudioPlatform.cpp  CDevStudioPlatform.h  CDevStudioPlatformExport.h  CDevStudioPlatformPlugin.cpp  CDevStudioPlatformPlugin.h  CDevStudioPluginManager.cpp  CDevStudioPluginManager.h  CDevStudioProject.cpp  CDevStudioProject.h  CDevStudioProjectManager.cpp  CDevStudioProjectManager.h  CDevStudioProjectTemplate.cpp  CDevStudioProjectTemplate.h  CDevStudioStatusBar.cpp  CDevStudioStatusBar.h  CDevStudioWindow.cpp  CDevStudioWindow.h  CDevStudioWindowManager.cpp  CDevStudioWindowManager.h  CMakeLists.txt  ICDevStudioPlugin.h  IPlatform.cpp  IPlatform.h  IPlugin.cpp  IPlugin.h  IPluginManager.cpp  IPluginManager.h  MenuBar.cpp  (+27 more)
src/cdevstudioplatform/interfaces/: IPlatform.h  IPlugin.h
src/cdevstudioplatform/plugin/: IPlugin.h  PluginContainer.cpp  PluginContainer.h  PluginManager.h
src/cdevstudioplatform/project/: Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h
src/cdevstudioplatform/ui/: MenuBar.h  Settings.h  SettingsPage.cpp  SettingsPage.h  TabWidget.h  Window.cpp  Window.h
src/cdevstudioplatform/utils/: Backend.cpp  Backend.h
src/cdevstudioprojectplatform/: CDevStudioProject.h  CDevStudioProjectPlatform.cpp  CDevStudioProjectPlatform.h  CDevStudioProjectPlatformExport.h  CMakeLists.txt
src/cdevstudiosystemplatform/: CDevStudioSystemPlatform.cpp  CDevStudioSystemPlatform.h  CDevStudioSystemPlatformExport.h  CMakeLists.txt
src/plugincore/: Backend.h  CMakeLists.txt  PluginCore.cpp  PluginCore.h  PluginCoreExport.h  Window.cpp  Window.h
src/plugineditor/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginEditor.json  PluginEditorExport.h  PluginPage.cpp  PluginPage.h
src/pluginhelp/: CMakeLists.txt  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogHelp.cpp  DialogHelp.h  DialogHelp.ui  PluginHelp.cpp  PluginHelp.h  PluginHelpExport.h  Resource.qrc
src/pluginhelp/data/: about_about.html  help.html
src/pluginproject/: CMakeLists.txt  CreateProjectDialog.cpp  CreateProjectDialog.h  PluginPage.h  PluginProject.cpp  PluginProject.h  PluginProject.json  PluginProjectExport.h  PluginProjects.cpp  PluginProjects.h  Project.h  ProjectTemplate.h
src/pluginprojectdata/: CMakeLists.txt  PluginProjectData.cpp  PluginProjectData.h  PluginProjectDataExport.h  Resource.qrc
src/pluginprojectexplorer/: CMakeLists.txt  PluginPage.cpp  PluginPage.h  PluginProjectExplorer.cpp  PluginProjectExplorer.h  PluginProjectExplorer.json  PluginProjectExplorerExport.h  ProjectExplorer.cpp  ProjectExplorer.h
src/pluginprojects/: CMakeLists.txt  CreateProjectDialog.cpp  CreateProjectDialog.h  DialogCreateProject.h  PluginPage.cpp  PluginPage.h  PluginProjects.cpp  PluginProjects.h  PluginProjects.json  PluginProjectsExport.h  ProjectTemplate.h
src/pluginprojects/data/templatec/: CMakeLists.txt
src/pluginprojects/data/templatecplusplus/: CMakeLists.txt  main.cpp
src/pluginprojectwizard/: CMakeLists.txt  DialogCreateProject.cpp  DialogCreateProject.h  PluginProjectWizard.cpp  PluginProjectWizard.h  PluginProjectWizardExport.h
src/pluginsettings/: CMakeLists.txt  DialogSettings.cpp  DialogSettings.h  PluginSettings.cpp  PluginSettings.h  PluginSettingsExport.h
src/plugintexteditor/: CMakeLists.txt  PluginPage.h  PluginTextEditor.cpp  PluginTextEditor.h  PluginTextEditor.json  PluginTextEditorExport.h
src/plugintoolchain/: CMakeLists.txt  PluginPage.cpp  PluginPage.h  PluginToolchain.cpp  PluginToolchain.h  PluginToolchain.json  PluginToolchainExport.h
