add_subdirectory(cdevstudio)
add_subdirectory(cdevstudioplatform)
add_subdirectory(plugincore)
add_subdirectory(pluginproject)
add_subdirectory(pluginprojectdata)
add_subdirectory(pluginprojectwizard)
add_subdirectory(pluginprojectexplorer)
add_subdirectory(pluginsettings)
add_subdirectory(pluginhelp)
